src/gui/accessible/linux/atspiadaptor_p.h
@@ -38,7 +38,7 @@ class AtSpiAdaptor :public QDBusVirtualObject
     Q_OBJECT
 
 public:
-    explicit AtSpiAdaptor(DBusConnection *connection, QObject *parent = nullptr);
+    explicit AtSpiAdaptor(QAtSpiDBusConnection *connection, QObject *parent = nullptr);
     ~AtSpiAdaptor();
 
     void registerApplication();
@@ -114,7 +114,7 @@ private:
 
     // private vars
     QSpiObjectReference accessibilityRegistry;
-    DBusConnection *m_dbus;
+    QAtSpiDBusConnection *m_dbus;
     QSpiApplicationAdaptor *m_applicationAdaptor;
 
     /// Assigned from the accessibility registry.
